# tbible

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: daily-bible-update.yml
data/: daily-verse-2025-07-17.txt  daily-verse-2025-07-28.txt  daily-verse-2025-08-03.txt  daily-verse-2025-08-04.txt  daily-verse-2025-08-13.txt  daily-verse-2025-09-01.txt  daily-verse-2025-09-04.txt  daily-verse-2025-09-17.txt  daily-verse-2025-09-22.txt  daily-verse-2025-10-01.txt  daily-verse-2025-10-05.txt  daily-verse-2025-10-06.txt
scripts/: test.sh
src/: main.rs
